# test-async-rust

./: Cargo.toml  README.md  fib.go  test-go.sh  test.sh
src/: main.rs
